--- a/hawc/apps/animalv2/templates/animalv2/fragments/_create_one.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_create_one.html
@@ -1,7 +1,5 @@
-<tr id={{id}} hx-target="this" >
-    {% if text %}
-    <td colspan="100%">
-        <p class="text-center mb-0">No {{text}} to display. Click "Add Row" to create one.</p>
-    </td>
-    {% endif %}
+<tr class="show-only-child">
+  <td colspan="100%">
+    <p class="text-center mb-0">{{text}}</p>
+  </td>
 </tr>
