--- a/hawc/apps/animalv2/templates/animalv2/fragments/_object_edit_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_object_edit_row.html
@@ -1,35 +1,29 @@
-<tr hx-target="this" hx-swap="outerHTML swap:0s" id="{{model}}-empty-row">
-    {% if form %}
-    <td colspan="100%">
-        <form method="post" class="border my-2 p-2 pb-5 edit-form-background form-{{model}}">
-            <div class="d-flex justify-content-end">
-                {% include "common/scientific_pulldown.html" %}
-            </div>
-
-            {% crispy form %}
-
-            {% for fsc in formset_contexts %}
-              {% include fsc.fragment with formset_instance=fsc.instance formset_helper=fsc.helper %}
-            {% endfor %}
-
-            <div class="form-row float-right">
-                {% if form.instance.id %}
-                <button id="{{model}}-save" class="btn btn-sm btn-primary" hx-post="{% crud_url 'animalv2' model 'update' object.pk %}">
-                    Save</button>
-                <button id="{{model}}-cancel" class="btn btn-sm btn-light" hx-get="{% crud_url 'animalv2' model 'detail' object.pk %}">
-                    <i class="fa fa-fw fa-times mr-1"></i>
-                    Cancel</button>
-                {% else %}
-                <button id="{{model}}-save" class="btn btn-sm btn-primary" hx-post="{% crud_url 'animalv2' model 'create' parent.pk %}">
-                    Save
-                </button>
-                <button id="{{model}}-cancel" class="btn btn-sm btn-light" type='button'
-                    onclick="this.parentNode.parentNode.parentNode.setAttribute('style', 'display: none')"><i
-                        class="fa fa-fw fa-times mr-1"></i>
-                    Cancel</button>
-                {% endif %}
-            </div>
-        </form>
+<tr hx-target="this" hx-swap="outerHTML swap:0s" class="{{app}}-edit-row {{model}}-edit-row">
+  {% if form %}
+    <td colspan="100%" class="p-3">
+      <form method="post" class="border p-2 pb-4 edit-form-background rounded pad-form form-{{model}}">
+        <div class="d-flex justify-content-end">
+          {% include "common/scientific_pulldown.html" %}
+        </div>
+        {% crispy form %}
+        <div class="form-row justify-content-center my-2">
+          {% if form.instance.id %}
+            <button id="{{model}}-save" class="btn btn-sm btn-primary mx-2 py-2" style="width: 15rem; padding: 0.7rem;" hx-post="{% crud_url app model 'update' object.pk %}">
+              Save</button>
+            <button id="{{model}}-cancel" class="btn btn-sm btn-light mx-2 py-2" style="width: 8rem; padding: 0.7rem;" hx-get="{% crud_url app model 'read' object.pk %}">
+              <i class="fa fa-fw fa-times mr-1"></i>
+              Cancel</button>
+          {% else %}
+            <button id="{{model}}-save" class="btn btn-sm btn-primary mx-2 py-2" style="width: 15rem; padding: 0.7rem;"  hx-post="{% crud_url app model 'create' parent.pk %}">
+              Save
+            </button>
+            <button id="{{model}}-cancel" class="btn btn-sm btn-light mx-2 py-2" type='button' style="width: 8rem; padding: 0.7rem;"
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.{{app}}-edit-row'), true)"><i
+              class="fa fa-fw fa-times mr-1"></i>
+              Cancel</button>
+          {% endif %}
+        </div>
+      </form>
     </td>
-    {% endif %}
+  {% endif %}
 </tr>
