--- a/hawc/apps/animalv2/templates/animalv2/fragments/_object_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_object_row.html
@@ -1,24 +1,24 @@
 {% if action == 'delete' %}
-<td>
+  <td>
     <form class="alert alert-danger">
-        {% csrf_token %}
-        <i class="fa fa-fw fa-exclamation-triangle mx-1"></i>Are you sure you want to delete?
-        <div class="d-flex flex-row-reverse">
-            <button id="{{model}}-confirm-del" class="btn btn-sm btn-danger mx-1" hx-post="{% crud_url 'animalv2' model 'delete' object.pk %}"
+      {% csrf_token %}
+      <i class="fa fa-fw fa-exclamation-triangle mx-1"></i>Are you sure you want to delete?
+      <div class="d-flex flex-row-reverse">
+        <button id="{{model}}-confirm-del" class="btn btn-sm btn-danger mx-1" hx-post="{% crud_url app model 'delete' object.pk %}"
                 hx-swap="outerHTML swap:1s">Confirm</button>
-            <button id="{{model}}-cancel-del" class="btn btn-sm btn-secondary mx-1"
-                hx-get="{% crud_url 'animalv2' model 'detail' object.pk %}">Cancel</button>
-        </div>
+        <button id="{{model}}-cancel-del" class="btn btn-sm btn-secondary mx-1"
+                hx-get="{% crud_url app model 'read' object.pk %}">Cancel</button>
+      </div>
     </form>
-</td>
+  </td>
 {% elif permissions.edit or obj_perms.edit and crud == "Update" %}
-<td>
-    <button id="{{model}}-update" class="btn btn-sm btn-primary" hx-get="{% crud_url 'animalv2' model 'update' object.pk %}">
-        <i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
-    <button id="{{model}}-delete" class="btn btn-sm btn-danger" hx-get="{% crud_url 'animalv2' model 'delete' object.pk %}">
-        <i class="fa fa-trash" aria-hidden="true"></i></button>
-    <button id="{{model}}-clone" class="btn btn-sm btn-secondary" hx-post="{% crud_url 'animalv2' model 'clone' object.pk %}"
-        hx-target="#{{model}}-empty-row" hx-swap="outerHTML">
-        <i class="fa fa-clone" aria-hidden="true"></i></button>
-</td>
+  <td>
+    <button id="{{model}}-update" class="btn btn-sm btn-primary" hx-get="{% crud_url app model 'update' object.pk %}">
+      <i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+    <button id="{{model}}-delete" class="btn btn-sm btn-danger" hx-get="{% crud_url app model 'delete' object.pk %}">
+      <i class="fa fa-trash" aria-hidden="true"></i></button>
+    <button id="{{model}}-clone" class="btn btn-sm btn-secondary" hx-post="{% crud_url app model 'clone' object.pk %}"
+            hx-target="#{{model}}-tbody" hx-swap="beforeend">
+      <i class="fa fa-clone" aria-hidden="true"></i></button>
+  </td>
 {% endif %}
