--- a/hawc/apps/animalv2/templates/animalv2/fragments/_chemical_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_chemical_row.html
@@ -2,7 +2,7 @@
     <td>{{object.name}}</td>
     <td>{{object.cas}}</td>
     <td>{{object.dtxsid.verbose_link|safe|default:"-"   }}</td>
-    {% include "animalv2/fragments/_object_row.html" with model="chemical" %}
+    {% include "animalv2/fragments/_object_row.html" with model="chemical" app="animalv2" %}
 </tr>
 {% if action == 'create' or action == 'clone' %}
     <tr style="display: none" id="chemical-empty-row" hx-target="this"></tr>
