--- a/hawc/apps/common/templates/common/fragments/_object_edit_row.html
+++ b/hawc/apps/common/templates/common/fragments/_object_edit_row.html
@@ -6,6 +6,9 @@
           {% include "common/scientific_pulldown.html" %}
         </div>
         {% crispy form %}
+        {% for fsc in formset_contexts %}
+          {% include fsc.fragment with formset_instance=fsc.instance formset_helper=fsc.helper %}
+        {% endfor %}
         <div class="form-row justify-content-center my-2">
           {% if form.instance.id %}
             <button id="{{model}}-save" class="btn btn-sm btn-primary mx-2 py-2" style="width: 15rem; padding: 0.7rem;" hx-post="{% crud_url app model 'update' object.pk %}">
