--- a/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_edit.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_edit.html
@@ -4,14 +4,12 @@
       {% include "common/scientific_pulldown.html" %}
     </div>
     {% crispy form %}
-    <!--
     <div class="d-block container float-right">
       <div class="float-right">
-        <button class="btn btn-sm btn-primary" hx-post="{% url 'animalv2:experiment-update' object.pk %}">Save</button>
-        <button class="btn btn-sm btn-light" hx-get="{% url 'animalv2:experiment-detail' object.pk %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
+        <button class="btn btn-sm btn-primary" hx-post="{% url 'animalv2:experiment-htmx' object.pk 'update' %}">Save</button>
+        <button class="btn btn-sm btn-light" hx-get="{% url 'animalv2:experiment-htmx' object.pk 'read' %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
       </div>
     </div>
-    -->
   </form>
   {{form.media}}
 </div>
